syntax = "proto3";

option go_package = "github.com/rtang03/grpc-server/core";

service GuploadService {
  rpc Upload(stream Chunk) returns (UploadStatus) {};
  rpc Download(FileRequest) returns (stream FileResponse) {};
  rpc Check(HealthCheckRequest) returns(HealthCheckResponse) {};
}

message Chunk {
  oneof data {
    bytes Content = 1;
    UploadFileInfo info = 2;
  }
}

// Download
message FileRequest {
  string filename = 1;
}

message FileResponse {
  bytes shard = 1;
}

// Upload
message UploadFileInfo {
  string filename = 1;
  string fileType = 2;
}

enum StatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadStatus {
  string Message = 1;
  StatusCode Code = 2;
}

message HealthCheckRequest {
  string service = 1;
  string pingAt = 2;
  string label = 3;
  string counter = 4;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  string receivedAt = 2;
}
